--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "tinydocs",
-  "version": "0.1.0",
-  "description": "Tiny documents used in a small team secretly.",
-  "main": "server.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Abreto/tinydocs.git"
-  },
-  "author": "Abreto",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Abreto/tinydocs/issues"
-  },
-  "homepage": "https://github.com/Abreto/tinydocs#readme",
   "dependencies": {
-    "express": "^4.14.1"
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2"
   }
 }
