--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "marked": "^0.3.6",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   }
